version/0.20/_sources/api/solver/_autosummary/settings/ablation_1.rst.txt
:orphan:

.. _ablation_1:

ablation
========

.. autoclass:: ansys.fluent.core.solver.settings_241.ablation_1.ablation
    :show-inheritance:

.. rubric:: Attributes

================================================================   ================================

Attribute                                                                                   Summary

================================================================   ================================
:ref:`ablation_select_model <ablation_select_model>`                                Ablation Model.

:ref:`ablation_vielle_a <ablation_vielle_a>`                                           Parameter A.

:ref:`ablation_vielle_n <ablation_vielle_n>`                                           Parameter n.

:ref:`ablation_flux <ablation_flux>`                                                 Species Flux?.

:ref:`ablation_surfacerxn_density <ablation_surfacerxn_density>`         Ablative Material Density.

:ref:`ablation_species_mf <ablation_species_mf>`                       'ablation_species_mf' child.

================================================================   ================================

.. rubric:: Included in:

===================================   =================================

Parent                                                          Summary

===================================   =================================
:ref:`wall_child <wall_child>`             'child_object_type' of wall.

:ref:`phase_child <phase_child_25>`       'child_object_type' of phase.

===================================   =================================

