version/0.28/_sources/api/solver/_autosummary/settings/ablation_1.rst.txt
:orphan:

.. _ablation_1:

ablation
========

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.ablation_1
    :show-inheritance:

.. rubric:: Attributes

================================================================   =====================================================

Attribute                                                                                                        Summary

================================================================   =====================================================
:ref:`ablation_select_model <ablation_select_model>`                                                     Ablation Model.

:ref:`ablation_vielle_a <ablation_vielle_a>`                                                                Parameter A.

:ref:`ablation_vielle_n <ablation_vielle_n>`                                                                Parameter n.

:ref:`ablation_flux <ablation_flux>`                                                                      Species Flux?.

:ref:`ablation_surfacerxn_density <ablation_surfacerxn_density>`                              Ablative Material Density.

:ref:`species_mass_fraction <species_mass_fraction_1>`                 List of species mass fractions or mole fractions.

================================================================   =====================================================

.. rubric:: Included in:

======================================   =============================================

Parent                                                                         Summary

======================================   =============================================
:ref:`wall_child <wall_child>`                            'child_object_type' of wall.

:ref:`phase_25_child <phase_25_child>`                   'child_object_type' of phase.

:ref:`settings_28 <settings_28>`             Select domain name to define settings on.

:ref:`phase_51_child <phase_51_child>`                   'child_object_type' of phase.

======================================   =============================================

